- [fix] Fixed issue with responsive iframe on safari ios for Gallery     - [feat] Updated image gallery package version

--- a/packages/components-react/src/components/Gallery/Gallery.scss
+++ b/packages/components-react/src/components/Gallery/Gallery.scss
@@ -42,6 +42,16 @@
       right: initial;
     }
   }
+
+  &__iframe-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    width: calc(100% + 1px); // Gallery content leaves 1px right
+    height: calc(100% - 95px); // Remove the slider height
+  }
+
   &__bottom-room-tour,
   &__iframe {
     position: absolute;
@@ -54,9 +64,14 @@
   &__iframe {
     top: 0;
     left: 0;
-    width: 100%;
-    height: calc(100% - 96px);
     border: none;
+    // Fix for responsive iframe on ios
+    width: 1px;
+    min-width: 100%;
+    *width: 100%;
+    height: 1px;
+    min-height: 100%;
+    *height: 100%;
   }
 
   &__bottom-room-tour {
